syntax = "proto3";

package Jubo.JuLiao.IM.Wx.Proto;

import "TransportMessage.proto";

// TalkToFriendTask Message
// Extracted from: TalkToFriendTask.java
// Note: Field numbers 5, 6, 7 are missing (possibly reserved or removed)
message TalkToFriendTaskMessage {
  string WeChatId = 1;
  string FriendId = 2;
  EnumContentType ContentType = 3;
  bytes Content = 4;
  string Remark = 8;
  int64 MsgId = 9;
  bool Immediate = 10;
}
