syntax = "proto3";

package  SCRM.SHARED.Proto;

message DeviceAuthReqMessage {
  enum EnumAuthType {
    Default = 0;
    DeviceCode = 1;
    Username = 2;
    InternalCode = 3;
  }

  EnumAuthType AuthType = 1;
  string Credential = 2;
}
